<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TargetObjectActivity">

    <TextView
        android:id="@+id/appname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="AppName"
        android:textColor="@color/normal_black"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/packagename_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="BundleID"
        android:textColor="@color/normal_black"
        android:layout_below="@+id/appname_title"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/second_line"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/packagename_title"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/secondEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/package_title"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="90"
            android:singleLine="true"
            android:inputType="number"/>

        <TextView
            android:id="@+id/secondText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1.2"
            android:text="@string/secondText"
            android:textColor="@color/normal_black"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/monitor_btn"
        android:layout_below="@+id/second_line">

        <View
            android:id="@+id/view_line_id"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/view_line" />

        <RelativeLayout
            android:id="@+id/whiteAreaID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line_id"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/whiteTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/whiteTitleText"
                android:textColor="@color/normal_black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/whiteTextArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/whiteTextTitle"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="@color/normal_black"
                android:textSize="16dp"
                android:maxLines="8"
                android:minLines="8"
                android:scrollbars="vertical"
                android:singleLine="false"/>
        </RelativeLayout>

        <View
            android:id="@+id/view_line_id2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/whiteAreaID"
            android:layout_marginTop="5dp"
            android:background="@color/view_line" />

        <RelativeLayout
            android:id="@+id/blackAreaID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line_id2"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/blackTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/blackTitleText"
                android:textColor="@color/normal_black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/blackTextArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blackTextTitle"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="@color/normal_black"
                android:textSize="16dp"
                android:maxLines="8"
                android:minLines="8"
                android:scrollbars="vertical"
                android:singleLine="false"/>
        </RelativeLayout>

        <View
            android:id="@+id/view_line_id3"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/blackAreaID"
            android:layout_marginTop="5dp"
            android:background="@color/view_line" />


    </RelativeLayout>


    <Button
        android:id="@+id/monitor_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:text="@string/monitorBtnStartText" />

</RelativeLayout>
